[tool.poetry]
name = "yelpflow"
version = "0.1.0"
description = ""
authors = ["Priyanshu Sharma <prynsh1112@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]


[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
